--- a/wp-content/themes/understrap-child/sass/theme/partials/_global_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_global_styles.scss
@@ -193,9 +193,10 @@ article{}
 } */
 
 
-.primary{
+.-color-primary, .-fill-primary, .-stroke-primary{
   color: $primary;
 }
+
 
 .bottom{
  top: unset;
