--- a/wp-content/themes/understrap-child/sass/theme/partials/_display_state_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_display_state_styles.scss
@@ -61,8 +61,8 @@
     }
 
 }
-
-.services__panel-img_container--wide-screen, .services__panel-img_container-wide-screen--management, .services-panel__bgimg-container_wide-screen--planning {
+.services-panel__bgimg-container_wide-screen--planning,
+.services__panel-img_container--wide-screen, .services__panel-img_container-wide-screen--management, .services-panel__bgimg-container_small-screen--planning {
     display: none;
 }
 .objectives-diagram__horizontal--delta {
