--- a/wp-content/themes/understrap-child/sass/theme/partials/_article_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_article_styles.scss
@@ -318,7 +318,7 @@ padding-left: 0;
 
 
 .claim__page_title{
-  color: $white;
+  color: $black;
   z-index:3;
 }
 
@@ -364,6 +364,7 @@ p.summary-page__claim--fancy{
   text-align: center;
   font-family: $font-family-serif;
   z-index:3;
+  @include vr($padding: 0 1);
 }
 
 //
@@ -682,18 +683,20 @@ color: $primary;
 // services splash
 // ==========================================================================
 
-.services__container_splash{
-
-   h1{
-    @extend %title;
+  .services__splash_page-title{
+   position: absolute;
+   top: 16em;
+   left: 0;
    }
-   h2{
-    @extend %subhead-sm;
+
+   .services__splash_headline{
+       @extend %headline;
        text-align: center;
   }
-  h3 {
-    @extend %sublist-sm;
-  }
+
+
+.services__container_splash{
+
  
   @include mq('tablet-wide'){
     text-align: center;
@@ -702,13 +705,23 @@ color: $primary;
   }
 }
 
-.container.services__container_splash{
-h1{
-  @include vr($margin: 0 0 1.5 0);
-}
-h2{
-  @include vr($margin: 0);
-}
+
+
+// .container.services__container_splash{
+// h1{
+//   @include vr($margin: 0 0 1.5 0);
+// }
+// h2{
+//   @include vr($margin: 0);
+// }
+// }
+
+.services__splash_subhead{
+  font-family: $font-family-serif;
+  font-style: italic;
+  text-align: center; 
+
+  @include vr($margin-top: 1, $font-size: 28.85px);
 }
 
 .services__splash_list{
@@ -739,54 +752,202 @@ h2{
 // ==========================================================================
 // services page/articles
 // ==========================================================================
-.services {
-  h1 {
-    @extend %subhead;
-  }
+// .services {
+//   h1 {
+//     @extend %subhead;
+//   }
 
-  h2 {
-    @extend %display-text-sm;
-  }
+//   h2 {
+//     @extend %display-text-sm;
+//   }
 
-  h3 {
-    @extend %display-text;
+//   h3 {
+//     @extend %display-text;
 
-    font-weight: 400;
-  }
+//     font-weight: 400;
+//   }
 
-  p {
-    @extend %display-text-sm;
-  }
+//   p {
+//     @extend %display-text-sm;
+//   }
 
-  li {
-    @extend %list-item;
+//   li {
+//     @extend %list-item;
 
-    color: #111;
-  }
+//     color: #111;
+//   }
 
-  %subhead {
-    @include vr($margin-bottom: 0);
-  }
+//   %subhead {
+//     @include vr($margin-bottom: 0);
+//   }
 
-  %display-text-sm {
-    @include vr($margin: 0 0 2 0);
-  }
+//   %display-text-sm {
+//     @include vr($margin: 0 0 2 0);
+//   }
+// }
+
+// ==========================================================================
+// services summary
+// ==========================================================================
+
+.container.services__article_container{
+  width: 100%;
+  max-width: 100%
 }
 
+.services__page_head{
+  background: $gray-100;
+  width: 100%;
+  max-width: 100%;
+  @include vr($padding: 2);
+}
+
+.services__page-head_headline{
+
+}
+
+
+
+.services__page-title {
+}
+.page__title {
+}
+.services__page_head {
+  display: flex;
+flex-direction: row;
+width: 80%;
+max-width: 80%;
+@include push-auto();
+}
+
+.serivces__page-head_container{
+  @include make-col-ready();
+  @include make-col(6);
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.services__page-head_headline {
+@extend %headline;
+}
+.services__page-head_subhead {
+@extend %subhead;
+}
+
+.services__page-head_description{
+  @extend %display-text;
+}
+
+.services__page-head_container--headers{
+@include make-col(7);
+}
+
+
+.services__page-head_container--lists{
+display: flex;
+flex-direction: column;
+@include make-col(5);
+}
+.services__list_container {
+
+display: flex;
+flex-direction: column;
+}
+
+.services__list_container--core-services {
+}
+.list__head {
+@extend %list-head;
+}
+
+.services__list-head_sublist{
+  @extend %sublist-sm;
+}
+
+.services__list_description{
+  @extend %body1-text;
+}
+
+.services__list-head_core-services {
+}
+.services__list_description--core-services {
+}
+.services__list {
+}
+.services-list__page-head_core-services {
+}
+.services__list-item_link {
+@extend %list-item;
+}
+.services__list_container--service-models {
+}
+.services__list-head_service-models {
+}
+.services__list_description--service-models {
+}
+.services-list__page-head_service-models {
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.services__intro-text_copy{
+  @extend %body1-text;
+}
+
+.services__intro-text_copy--leader{
+ @extend %body1-text;
+ font-weight: 400;
+}
+
+p.services__intro-text_copy{
+  @include vr($margin: 2 0);
+}
 .services__panel_block--planning{
-  background: #daeaf7;
+  // background: #daeaf7;
 }
 
 .services__panel_flex-container--planning{
-background: rgba(0, 0, 0, .8);
+background: #111;
+@include mq('tablet-wide'){
+  background: rgba(0, 0, 0, .8);
+}
 }
 
-.services__list_list-item {
+ul.services__list{
+padding-left: 2em;
+  list-style-position: inside;
+  text-indent: -2em;
+  margin-left: 1em;
+@include vr($margin-top: 1em);
+}
+
+.services__panel_list-head{
+  color: $offwhite;
+  @extend %list-head;
+}
+
+.services__list-item {
   @extend %list-item;
+    // list-style-type: disc;
+    // list-style-position: inside;
+    // text-indent: -1em;
+    // padding-left: 1em;
 }
 
-.services__panel-headline{
-  @extend %subhead-sm;
+.services__panel_headline{
+  @extend %subhead;
 }
 
 .services__panel_headers{
@@ -797,15 +958,13 @@ background: rgba(0, 0, 0, .8);
 }
 
 .services__panel_summary {
-  @extend %display-text-sm;
+  @include vr($font-size: 18px);
   font-weight: 400;
 }
 
-.services__list{
-  padding-inline-start: 0;
-  padding-left: 0;
-  list-style-position: inside;
-}
+
+
+
 
 // ==========================================================================
 // planning & analysis 
@@ -813,7 +972,6 @@ background: rgba(0, 0, 0, .8);
 
 .services__panel--planning{
   background: $black;
-  @extend .blueA-reversed;
 }
 
 .services__panel-head--planning, .services__panel_content--planning, li.services__list-item--planning{
@@ -821,7 +979,7 @@ background: rgba(0, 0, 0, .8);
 }
 
 // ==========================================================================
-// capabilities
+// capabilities menu
 // ==========================================================================
 
 .my-capabilities {
@@ -829,14 +987,12 @@ background: rgba(0, 0, 0, .8);
     @extend .page__title;
   }
 
-  h2 {
-    @extend %display-text-lg;
-  }
+
 
   h3 {}
 
   h4 {
-    /*      @extend %display-text-lg; */
+          @extend %display-text-lg; 
   }
 
   /*         @extend %display-text-lg;  */
@@ -845,6 +1001,42 @@ background: rgba(0, 0, 0, .8);
     @extend %display-text-sm;
   }
 }
+
+
+
+
+
+
+
+
+
+
+.my-capabilities__main-page {
+background: $pattens;
+}
+
+.my-capabilities__panel-head{
+}
+
+h2.capabilities__menu_headline{
+  @extend %headline;
+}
+
+.capabilities__menu_subhead{
+  @extend %subhead;
+  @include mq('tablet-wide'){
+  // @include vr($width: 40);
+  margin-left: auto;
+  margin-right: auto;
+}
+}
+
+.capabilities__menu_text{
+  @extend %display-text;
+  // @include vr($width: 29);
+}
+
+
 
 .capabilities__menu_item {
   %subhead-sm {
@@ -872,6 +1064,7 @@ background: rgba(0, 0, 0, .8);
   @extend %body-text;
 
   font-style: italic;
+  Color: $pattens;
 }
 
 // ==========================================================================
@@ -968,6 +1161,74 @@ background: rgba(0, 0, 0, .8);
     text-transform: uppercase;
   }
 }
+
+// ==========================================================================
+// services__commitment_panel_styles
+// ==========================================================================
+
+.article__wrapper {
+}
+.content__wrapper {
+}
+.commitment__article_wrapper {
+}
+.container {
+}
+.commitment__article_container {
+}
+.page__title {
+}
+.subhead {
+}
+.commitment__headline {
+font-weight: 500;
+letter-spacing: -.05rem;
+}
+
+.commitment__background{
+  // height: 100%;
+  // position: absolute;
+  // width: 25%;
+  // background: $pattens;
+  // z-index: -1;
+  // left: -2em;
+  // top: -2em;
+}
+.content__container {
+}
+.commitment_content__container {
+}
+.commitment__subhead_container {
+}
+.commitment__subhead {
+font-weight: 500;
+text-transform: lowercase;
+letter-spacing: -.05rem;
+color: $primary;
+}
+
+
+p.commitment__body_copy {
+@include vr($margin: 2);
+max-width: 24em;
+}
+
+.commitment__body-copy--leader {
+font-weight: 400;
+
+}
+
+.link {
+}
+.link__advance--chevron {
+}
+.chev--dwn {
+}
+.style-svg {
+}
+
+
+
 
 // ==========================================================================
 // call to action page
