--- a/wp-content/themes/understrap-child/sass/theme/partials/_layout_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_layout_styles.scss
@@ -465,7 +465,12 @@ display: none;
  align-items: center;
 }
 
-
+.claim__page_title{
+position: absolute;
+top: 3em;
+left: 0;
+ }
+  
 .summary-page__container_claim{
   display: flex;
   flex-direction: column;
@@ -804,12 +809,25 @@ svg#services__arrow--img{
   @include cols();
 }
 
+.services__splash_page-title{
+
+}
+
+.services__page-title{
+  color:$black;
+}
 .services__page_head{
   position: relative;
 }
 
 .services__panel_container{
   position: relative;
+}
+
+.services__panel_wrapper{
+  position: relative;
+  overflow: hidden;
+  width: 100%;
 }
 
 .services__panel_block {
@@ -823,11 +841,13 @@ svg#services__arrow--img{
 }
 
 .services__panel_content {
-  max-width: 25em;
+  // max-width: 25em;
   position: relative;
   @include push-auto;
   @include vr($margin-bottom: 1);
 }
+
+
 
 .services__panel-img_container--small-screen{
 @include vr($margin-bottom: 2);
@@ -854,6 +874,11 @@ position: relative;
   width: 40em;
   display: block;
   margin: 0 auto;
+}
+
+.tungscreens--small{
+  @include push-auto();
+  display: block;
 }
 
 #blue_a {
@@ -913,6 +938,15 @@ position: relative;
   }
 }
 
+@include mq('tablet-wide'){
+  .container.my-capabilities{
+    width: 100%;
+    max-width: 100%
+  }
+}
+
+
+
 .my-capabilities__main-page {
   position: relative;
 }
@@ -921,9 +955,36 @@ position: relative;
   position: relative;
 }
 
+.my-capabilities__main-page_wrapper{
+position: relative;
+width: 100%;
+@include vr($padding: 3 4 0 4);
+}
+
+.my-capabilities__panel-head{
+  @include vr($margin: 6 auto 2 auto, $width: 42);
+  text-align: center;
+}
+
+
 .capabilities__main-page_menu {
   @include vr($margin-top: 4);
+  @include mq('tablet-wide'){
+    @include vr($width: 64, $padding: 4);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    background: $offwhite;
+    align-items: start;
+    border-radius: 2em 2em 0 0;
+    margin-top: -20em;
+    margin-left: auto;
+    margin-right: auto;
+    border: thin solid $gray-300;
+  }
 }
+
+
 
 .capabilities__menu_item {
   display: flex;
@@ -933,8 +994,13 @@ position: relative;
   max-width: 100%;
   justify-content: flex-start;
   align-items: center;
-
   @include vr($margin: 3 0);
+  @include mq('tablet-wide'){
+    @include make-col-ready();
+    @include make-col(6);
+    padding-left: 0px;
+    padding-right: 0px;
+  }
 }
 
 .link {
@@ -968,6 +1034,11 @@ position: relative;
   justify-content: flex-start;
 
   @include vr($padding-left: 1);
+@include mq('tablet-wide'){
+  width:  55%;
+  max-width:  55%;
+
+}
 }
 
 #capabilities__menu_link {
@@ -1145,6 +1216,12 @@ position: relative;
   flex-direction: row;
   align-items: flex-start;
 }
+
+ .services__splash_page-title{
+    left: 50%;
+      transform: translate(-50%,-50%); 
+  } 
+
 .container.services__container_splash{
   @include make-col-ready();
   @include make-col(7);
@@ -1153,9 +1230,10 @@ position: relative;
   margin-right: auto;
 }
 
-.container.services__container_splash h2{
-  margin-bottom: 40%;
-}
+.container h2.services__container_splash{
+    @include vr($margin-bottom: 1);
+  }
+
 
 #bell{
   @include make-col-ready();
@@ -1165,16 +1243,26 @@ position: relative;
   padding-right: 0px;
 }
 
+
 #bell-small{
   width: 100%;
   margin: 0 auto;
 }
 
+.services__panel_container{
+  width: 100%;
+display: flex;
+flex-direction: column;
+flex-wrap: wrap;
+}
+
 
 .services__panel_block {
-  min-height: 35vh;
   @include vr($margin-top:3, $margin-bottom: 3);
-  // overflow: hidden;
+  overflow: hidden;
+  width: 90%;
+  max-width: 90%;
+  @include push-auto();
 }
 
 
@@ -1182,12 +1270,13 @@ position: relative;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 60%;
-  margin-left: auto;
-  margin-right: auto;
   padding-left: 0;
   padding-right: 0;
-  background: $black;
+  background: rgba(17, 17, 17, .8);
+    width: 75%;
+  max-width: 75%;
+  flex: 0 0 auto;
+  z-index: 3;
 }
 h3.services__panel_headline{
   @include vr($margin-bottom: 2);
@@ -1198,98 +1287,293 @@ h3.services__panel_headline{
 .services__panel_summary, li.services__list-item {
   color:$offwhite;
 }
-.services__panel_content{
-  @include make-col-ready();
-  @include make-col(12);
-  padding-left: 0px;
-  padding-right: 0px;
-  margin: 0;
 
+
+// .services__list-item{
+//   @include vr($width: 20);
+// }
+
+.services__list{
+  @include vr($width: 18);
+}
+
+.services__panel_content{
+  @include make-col(12);
+   @include vr($padding-top: 4, $padding-bottom: 4, $padding-left: 4, $padding-right: 4);
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  // min-height: 60em;
+ 
+}
+
+.services__panel_headers{
+@include make-col-ready();
+@include make-col(12);
+padding-left: 0px;
+padding-right: 0px;
 }
 
 .services__panel_copy{
   @include make-col-ready();
 @include make-col(6);
-padding-left: 0px;
-padding-right: 0px;
-  margin: 0;
+@include vr($padding: 0 1 0 1);
+  // margin: 0;
 }
 
-.services__panel-img_container--wide-screen{
-@include make-col-ready();
-@include make-col(6);
-padding-left: 0px;
-padding-right: 0px;
-margin: 0;
-display: flex;
-flex-direction: row;
-align-items: center;
+.services__panel_copy{
+  // max-width:25em;
 }
+
+
+.link.services__services-to-capabilities_link{
+  @include make-col-ready();
+  @include make-col(12);
+  padding-left: 0px;
+  padding-right: 0px;
+  @include vr($margin: 1 0 0 0);
+}
+
+.services-panel__bgimg_widescreen{
+ height: 40em;
+overflow: hidden;
+ width: 80%; 
+position: absolute;
+   top: 50%;
+   transform: translate(-50%,-50%);
+}
+
+
 
 //
 // webdev customizations
 //
 
-.services__panel_block--webdev{}
+.services__panel_block--webdev, .serivces__panel_block--planning, .serivces__panel_block--planning{
+
+}
+//   display: flex;
+//   flex-direction: row;
+// }
+
 
 .services__panel_flex-container--webdev{
-  width: 90%;
-  flex-direction: column;
-  justify-content: center;
-  background: none;
-}
-.services__panel_content--webdev{
-  max-width: 33%;
-  flex: 0 0 33%;
-  z-index: 3;
-  @include vr($padding: 4 3 4 3);
-    background: $black;
-  // color: $tungsten;
+//   width: 31%;
+//   max-width: 31%;
+//   flex: 0 0 auto;
+
 }
 
-.services__panel-headers--webdev{}
 
-.services__panel-img_container--small-screen{}
 
-.services__panel_copy--webdev{
-  flex: 0 0 auto;
-  // max-width: 33%;
-  // flex: 0 0 33%;
-  // @include vr($padding: 2 4 4 4);
-  // z-index: 3; 
-}
-
-.services__panel_copy--webdev, .services__panel_summary--webdev, .services__list_container--webdev{
-  width: 100%;
+.tungscreens{
+  width: 82%;
   max-width: 100%;
-}
-
-  li.services__list-item--webdev{
-  color: $tungsten;
-}
-
-
-.services__panel-img_container--wide-screen---webdev{
-position: absolute;
-display: flex;
-width: 107em;
-max-width: 80%;
-align-self: flex-end;
-z-index: 1;
-}
-
-.services__panel_img--webdev{
-  width: 107em;
   height: auto;
-  display: block;
+  margin-left: 18em;
 }
 
-img.tungscreens{
-margin-left: 6em;
-// height: 37em;
-width: 107em;
-height: 43em;
+.services-panel__bgimg_widescreen--planning{
+  height: 60em;
+  left: 32%;
 }
+
+.services__panel_flex-container--planning{
+  // margin-right: 10%;
+  margin-left: auto;
+}
+
+.services-panel__bgimg_widescreen--webdev{
+     left: 50%;
+     height: 35em;
+     top: 55%;
+     width: 90%;
+}
+
+.services-panel__bgimg_widescreen--management{
+  width: 100%;
+     transform: translate(0,-50%);
+     left: 0;
+}
+
+// .services__panel_wrapper--webdev{
+//   order: 1;
+
+// }
+// .services__panel_wrapper--planning{
+//   order: 3;
+
+// }
+// .services__panel_wrapper--management{
+//   order: 2;
+
+// }
+
+
+#svg__blue_a2--bg{
+// opacity: .7;
+// transform: skewY(26deg);
+// width: 115em;
+// opacity: .7;
+// transform: skewY(26deg);
+width: 70em;
+margin-top: -6em;
+}
+
+
+
+
+
+.services__img_conference-table{
+        -moz-transform: scaleX(-1);
+        -o-transform: scaleX(-1);
+        -webkit-transform: scaleX(-1);
+        transform: scaleX(-1);
+        filter: FlipH;
+        -ms-filter: "FlipH";
+      }
+
+// .services-panel__bgimg_widescreen--webdev{
+//  width: 80%; 
+// position: absolute;
+// left: 50%;
+//    top: 50%;
+//    transform: translate(-50%,-50%);
+// }
+
+
+// .services__panel_block--webdev{
+//   // background: #3d3d3d;
+//   display: flex;
+//   flex-direction: column;
+//   // @include vr($margin: 0 2, $padding: 0);
+//   // overflow: hidden;
+//   // height: 56em;
+// align-items: center;
+// justify-content: center;
+//   padding-top: 0;
+//   padding-bottom: 0;
+//     overflow: hidden;
+//     // height: 70%;
+// //     width: 100%;
+// //     max-width: 100%;
+// //     height: 100%;
+// // }
+
+
+// .services__panel_flex-container--webdev{
+//   display: flex;
+//   flex-direction: column; 
+//   z-index: 3;
+// width: 31%;
+// max-width: 31%;
+//   // height: 100%;
+//   justify-content: center;
+//   align-items: flex-end;
+//   // margin-top: -2em;
+//   // margin-bottom: -2em;
+//   // background: none;
+// margin: unset;
+// }
+
+
+// .services-panel__bgimg-wrapper_wide-screen--webdev{
+// position: absolute;
+// width: 100%;
+// max-width: 100%;
+// overflow:hidden;
+// left: 0;
+// top: 0;
+// display: flex;
+// flex-direction: row;
+// align-items: center;
+// }
+
+
+// .services-panel__bgimg-container_wide-screen--webdev{
+// width: 100%;
+// max-width: 100%;
+// flex: 0 0 auto;
+// overflow: hidden;
+// margin-left: 20em;
+
+// }
+
+// .services-panel__bgimg_widescreen--webdev{
+// display: flex;
+// flex: 0 0 auto;
+// width: 100%;
+// max-width: 100%;
+// // position: absolute;
+// // width: 100%;
+// // max-width: 100%;
+// // height: 100%;
+// // top: 0;
+// // left:0;
+// // z-index: 0;
+// // width: 107em;
+// // max-width: 80%;
+// // align-self: flex-end;
+// z-index: 0;
+// position: relative;
+// }
+
+// img.tungscreens{
+// width: 107em;
+// height: 40em;
+// }
+
+
+
+
+// .services__panel_content--webdev{
+// width: 100%;
+// max-width: 100%;
+//   z-index: 3;
+//   // @include vr($padding: 4 3 4 3);
+//     background: $black;
+//   // color: $tungsten;
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+// }
+
+// .services__panel-headers--webdev{}
+
+// .services__panel-img_container--small-screen{}
+
+// .services__panel_copy--webdev{
+//   flex: 0 0 auto;
+//   // max-width: 33%;
+//   // flex: 0 0 33%;
+//   // @include vr($padding: 2 4 4 4);
+//   // z-index: 3; 
+// }
+
+// // .services__panel_copy--webdev, .services__panel_summary--webdev, .services__list_container--webdev{
+// //   width: 100%;
+// //   max-width: 100%;
+// // }
+
+//   li.services__list-item--webdev{
+//   color: $tungsten;
+// }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 //
@@ -1297,38 +1581,75 @@ height: 43em;
 //
 
 
-.services__panel_block--planning{
-  // background: #3d3d3d;
-  display: flex;
-  flex-direction: row;
-  @include vr($margin: 0 2, $padding: 0);
-  overflow: hidden;
-  height: 56em;
+// .services__panel_block--planning{
 
-}
+//   display: flex;
+//   flex-direction: row;
 
-.services__panel_flex-container--planning{
-  display: flex;
-  flex-direction: column; 
-  z-index: 3;
-width: 31%;
-max-width: 31%;
-  height: 100%;
-  margin: 0 10% 0 auto;
-  justify-content: center;
-  align-items: flex-end;
-    // background: rgba(51, 51, 51, .7);
-}
+// align-items: center;
+//   padding-top: 0;
+//   padding-bottom: 0;
+//     overflow: visible;
+//     height: 70%;
+//     width: 100%;
+//     max-width: 100%;
+
+// }
+
+// .services__panel_flex-container--planning{
+//   display: flex;
+//   flex-direction: column; 
+//   z-index: 3;
+// width: 31%;
+// max-width: 31%;
+//   height: 100%;
+//   margin: 0 10% 0 auto;
+//   justify-content: center;
+//   align-items: flex-end;
+//   margin-top: -2em;
+//   margin-bottom: -2em;
+
+// }
+
+
+
+// .services-panel__bgimg-wrapper_wide-screen-planning{
+
+// flex: 0 0 auto;
+// height: 60em;
+// position: absolute;
+// width: 100%;
+// max-width: 100%;
+// overflow:hidden;
+// left: 0;
+// background: $pattens;
+// }
+
+
+// .services-panel__bgimg-container_wide-screen--planning{
+// height: 60em;
+// }
+
+// .services-panel__bgimg_widescreen--planning{
+//     position: absolute;
+//     width: 100%;
+//     max-width: 100%;
+//     height: 100%;
+//     top:-10em;
+//     left: 0;
+//     z-index: 0;
+// }
+
+
 
 .services__panel_content--planning{
-  @include make-col-ready();
  width: 100%;
  max-width: 100%;
 
   color: $offwhite;
   z-index: 3;
   flex: 0 0 auto;
-     @include vr($padding: 4 3 4 3);
+     // @include vr($padding: 4 3 4 3);
 }
 
 .services__panel-headers--planning{}
@@ -1339,10 +1660,10 @@ max-width: 31%;
 
 }
 
-.services__panel_copy--planning, .services__panel_summary--planning, .services__list_container--planning{
-  width: 100%;
-  max-width: 100%;
-}
+// .services__panel_copy--planning, .services__panel_summary--planning, .services__list_container--planning{
+//   width: 100%;
+//   max-width: 100%;
+// }
 
 .services__panel_copy--planning{
   // @include vr($padding: 0 2 4 2);
@@ -1354,50 +1675,29 @@ text-align: left;
 }
 
 
-.services-panel__bgimg-container_wide-screen--planning{
-    position: absolute;
-    width: 100%;
-    left: -17em;
-    top: -18em;
-    z-index: 0;
-}
+// .container.services__panel_block--management{
+//   width: 100%;
+//   max-width: 100%;
+//   padding-bottom: 0;
+//   // min-height: 550px;
+// }
 
-.services-panel__bgimg_widescreen--planning{
-  
-}
+// .services__panel_flex-container--management{
+// z-index: 3;
+// // background:  rgba(59,68,76,.65);
+// @include vr($margin-left: 6%);
+// // min-height: 550px;
+// width: 31%;
+// max-width: 31%;
+// flex-direction: column;
+// justify-content: center;
 
-#blue__a2_bg{
-opacity: .7;
-transform: skewY(26deg);
-width: 104em;
-}
+// }
 
-.container.services__panel_block--management{
-  width: 100%;
-  max-width: 100%;
-  padding-bottom: 0;
-  // min-height: 550px;
-}
-
-.services__panel_flex-container--management{
-z-index: 3;
-// background:  rgba(59,68,76,.65);
-@include vr($margin-left: 6%);
-// min-height: 550px;
-width: 31%;
-max-width: 31%;
-flex-direction: column;
-justify-content: center;
-
-}
-
-.services__panel_content--management{
-@include make-col-ready();
-@include make-col(12);
-padding-left: 0px;
-padding-right: 0px;
-   @include vr($padding: 4 3 4 3);
-}
+// .services__panel_content--management{
+// @include make-col(12);
+// // @include vr($padding: 4 3 4 3);
+// }
 
 // h3.services__panel_headline.services__panel_headline--management{
 //   @include vr($margin-bottom: 2);
@@ -1415,13 +1715,13 @@ padding-left: 0px;
 padding-right: 0px;
 }
 
-.services__panel-img_container-wide-screen--management{
-  position: absolute;
-  width: 100%;
-  left: 0;
-  bottom: 0;
-  z-index: 0;
-}
+// .services__panel-img_container-wide-screen--management{
+//   position: absolute;
+//   width: 100%;
+//   left: 0;
+//   bottom: 0;
+//   z-index: 0;
+// }
 }
 
 @include mq('desktop'){}
