--- a/wp-content/themes/understrap-child/sass/theme/partials/_type_style_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_type_style_variables.scss
@@ -77,12 +77,13 @@ font-family:        $font-family-serif;
 %list-head, %list-head-lg, %list-head-sm{
 font-family:        $display-text-font-family;
 color:              $display-text-color;        
-font-weight:        300;	
+font-weight:        400;
+letter-spacing: 	-.025em;	
 }
 %list-item, %list-item-lg, %list-item-sm{
 font-family:        $display-text-font-family;
 color:              $display-text-color;        
-font-weight:        300;	
+font-weight:        200;	
 }
 
 
