--- a/wp-content/themes/understrap-child/sass/theme/partials/mixins/_bootstrap_mixins_override.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/mixins/_bootstrap_mixins_override.scss
@@ -64,7 +64,7 @@ $grid-gutter-width: 0;
   // always setting `width: 100%;`. This works because we use `flex` values
   // later on to override this initial width.
   width: 100%;
-  min-height: 1px;
+  color: red;
 }
 
 /* 
